--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -9,9 +9,9 @@ engines:
       - php
   eslint:
     enabled: true
-    checks:
-      wrap-iife:
-      	enabled: false
+    #checks:
+      #wrap-iife:
+      	#enabled: false
   fixme:
     enabled: true
 ratings:
